# ROS_UR5

comp650_pkg/: CMakeLists.txt  traj.yaml
comp650_pkg/nodes/: planning_service_client_test.py
comp650_pkg/src/comp650_pkg/: planning_service.py
comp650_pkg/srv/: PlanningRequest.srv
fetch_robot/fetch_ros/fetch_navigation/config/: costmap_common.yaml
universal_robot/ur5_robotiq85_kinect_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
universal_robot/ur5_robotiq85_kinect_moveit_config/config/: ur5_robotiq85_kinect.srdf
universal_robot/ur5_robotiq85_kinect_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_robotiq85_kinect_moveit_controller_manager.launch.xml  ur5_robotiq85_kinect_moveit_planning_execution.launch  ur5_robotiq85_kinect_moveit_sensor_manager.launch.xml  warehouse.launch
universal_robot/ur5_robotiq85_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
universal_robot/ur5_robotiq85_moveit_config/config/: ur5_robotiq85.srdf
universal_robot/ur5_robotiq85_moveit_config/launch/: demo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  test_motion.launch  trajectory_execution.launch.xml  ur5_robotiq85_moveit_planning_execution.launch  warehouse.launch
universal_robot/ur5_robotiq85_moveit_config/nodes/: manipulator_planning_test.py
universal_robot/ur_description/: urdf.rviz
universal_robot/ur_description/launch/: ur5_robotiq85_display.launch  ur5_robotiq85_kinect_table_upload.launch  ur5_robotiq85_upload.launch
universal_robot/ur_description/urdf/: ur5.urdf.xacro  ur5_robotiq85_kinect_table.urdf.xacro  ur5_robotiq_robot.urdf.xacro  ur5_robotiq_robot_limited.urdf.xacro
universal_robot/ur_description/urdf/sensors/: kinect.urdf.xacro  kinect_gazebo.urdf.xacro
universal_robot/ur_gazebo/launch/: ur5_robotiq85.launch  ur5_robotiq85_kinect_table.launch
